# ml-play-ground

./: Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.sh  utils.py
.streamlit/: config.toml
tests/: test_ml_playground.py
